...
    <string name="activity_filter_set">SET FILTER</string>
    <string name="tab_place">Place</string>
    <string name="tab_symptom">Symptom</string>
    <string name="not_available">Not available</string>
    <!-- Filter type option -->
    <string name="activity_filter_type">Type</string>
    <string name="type_all">All</string>
    <string name="type_healthcenters">Hospital</string>
    <string name="type_pharmacies">Pharmacy</string>
    <!-- Filter rating option -->
    <string name="activity_filter_rating">Minimum rating</string>
    <string-array name="activity_filter_rating_options">
        <item>1</item>
        <item>2</item>
...
